--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Merriweather", serif;
+}
+
+body{
+    background-color: #F5F3F7;
 }
 
 .container{
@@ -14,6 +19,7 @@
     text-align: center;
     font-size: 1.5em;
     margin: 60px 0px;
+    color: #8B5FBF;
 }
 
 .container main #inputan{
@@ -22,6 +28,7 @@
     margin-bottom: 20px;
     max-width: 500px;
     margin: 0 auto 20px auto;
+    background-color: #8B5FBF;
 }
 
 .container main #inputan form{
@@ -33,16 +40,22 @@
 
 .container main #inputan form label{
     margin-bottom: 20px;
+    color: white;
 }
 
 .container main #inputan form #number{
     padding: 6px 10px;
     margin-bottom: 20px;
     width: 100%;
+    background-color: #E9E4ED;
+    border-radius: 5px;
 }
 
 .container main #inputan form #convert-btn{
     padding: 6px 10px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
 }
 
 .container main #hasil{
@@ -52,6 +65,7 @@
     padding: 20px 40px;
     max-width: 500px;
     margin: 0 auto;
+    background-color: #8B5FBF;
 }
 
 .container main #hasil p{
